# clibib

./: .gitignore  README.md  pyproject.toml
skill/: README.md
skill/clibib/: SKILL.md
skill/clibib/references/: api-guide.md
src/clibib/: api.py  cli.py
tests/: test_cli.py
