[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clibib"
version = "1.0.0"
description = "Fetch BibTeX entries from a URL, DOI, ISBN, PMID, or arXiv ID"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Delip Rao" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
keywords = ["bibtex", "citation", "doi", "isbn", "arxiv", "pmid", "bibliography"]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/delip/clibib"
Repository = "https://github.com/delip/clibib"
Issues = "https://github.com/delip/clibib/issues"

[project.scripts]
clibib = "clibib.cli:main"

[project.optional-dependencies]
dev = ["pytest"]
